--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,234 @@
-.App {
-  text-align: center;
+html {
+    scroll-behavior: smooth;
+  }  
+
+body{
+    background-color: black;
+}
+*{
+    padding: 0;
+    margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-main--container{
+    height: 93vh;
+    border: 8px solid #fa8812;
+    margin:20px;
+    overflow: hidden !important;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.set{
+    width: 97%;
+    height: 93vh;
+    border:8px solid #fa8812;
+    pointer-events: none;
+    position: absolute;
+    top:20px;
+    margin: 0 20px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.set div{
+position:absolute;
+display: block;
 }
 
-.App-link {
-  color: #61dafb;
+
+.set div:nth-child(1){
+    left:20%;
+    animation: animate 15s linear infinite;
+    animation-delay: -7s;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.set div:nth-child(2){
+    left:50%;
+    animation: animate 20s linear infinite;
+    animation-delay: -5s;
 }
+
+.set div:nth-child(3){
+    left:70%;
+    animation: animate 20s linear infinite;
+    animation-delay: 0s;
+}
+
+.set div:nth-child(4){
+    left:0%;
+    animation: animate 15s linear infinite;
+    animation-delay: -5s;
+}
+
+.set div:nth-child(5){
+    left:85%;
+    animation: animate 18s linear infinite;
+    animation-delay: -10s;
+}
+
+.set div:nth-child(6){
+    left:70%;
+    animation: animate 12s linear infinite;
+}
+
+.set div:nth-child(7){
+    left:15%;
+    animation: animate 14s linear infinite;
+}
+
+.set div:nth-child(8){
+    left:60%;
+    animation: animate 15s linear infinite;
+}
+
+.set div:nth-child(9){
+    left:40%;
+    animation: animate 15s linear infinite;
+    animation-delay: -8s;
+}
+.set div:nth-child(10){
+    left:35%;
+    animation: animate 15s linear infinite;
+    animation-delay: -10s;
+}
+
+.set div:nth-child(11){
+    left:70%;
+    animation: animate 15s linear infinite;
+    animation-delay: -6s;
+}
+
+.set div:nth-child(12){
+    left:90%;
+    animation: animate 15s linear infinite;
+    animation-delay: -12s;
+}
+
+.set div:nth-child(13){
+    left:25%;
+    animation: animate 15s linear infinite;
+    animation-delay: -5s;
+}
+
+.set div:nth-child(14){
+    left:35%;
+    animation: animate 15s linear infinite;
+    animation-delay: -12s;
+}
+
+.set div:nth-child(15){
+    left:45%;
+    animation: animate 15s linear infinite;
+    animation-delay: -15s;
+}
+
+.variation-button{
+    position: fixed;
+    top:510px;
+    z-index: 100;
+    right: 40px;
+    background: black;
+    border-radius: 50px;
+    border: 3px solid #ffffff;
+    padding: 8px;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+
+.variation-button img{
+    width: 30px;
+}
+
+.variation-button:hover{
+    transform: scale(1.1);
+}
+
+.hello-div{
+background-color: white;
+width: 85px;
+height: 30px;
+border-radius:10px 0 10px 0;
+display: flex;
+align-items: center;
+justify-content: center;
+}
+
+
+.hello-span{
+ font-weight: bold;
+ font-size: 1.1rem;
+ letter-spacing: 0.5px;
+ color: black;
+ border-radius: 30px;
+ padding: 5px;
+}
+
+
+@keyframes animate {
+    0%{
+        opacity: 0;
+        top:-10%;
+        transform: translate(20px) rotate(0deg);
+    }
+    10%{
+        opacity: 1;
+    }
+    20%{
+        transform: translate(-20px) rotate(45deg);
+    }
+    40%{
+        transform: translate(-20px) rotate(90deg);
+    }
+    60%{
+        transform: translate(20px) rotate(180deg);
+    }
+    80%{
+        transform: translate(-20px) rotate(180deg);
+    }
+    100%{
+        top:90%;
+        transform: translate(-20px) rotate(225deg);
+    }
+}
+
+
+@media (max-width:650px) { 
+.app-main--container{
+    height: 105vh;
+ }
+
+ .set{
+    width: 90%;
+}
+
+
+}
+
+@media (max-width:500px) { 
+    .app-main--container{
+        height: 110vh;
+     }
+     
+    }
+
+    @media (max-width:425px) { 
+        .app-main--container{
+            height: 100vh;
+         }
+         .set{
+            width: 85%;
+        }
+         .set div img{
+            width: 50px;
+        }
+    }
+
+    @media (max-width:390px) { 
+        .app-main--container{
+            height: 110vh;
+         }
+    }
+    .divider-hr{
+        width: 100px;
+        margin: 100px auto;
+        border-top: 15px dotted #fa8812;
+        border-radius: 0px;
+        opacity: 0.8;
+    }
