--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -175,6 +175,10 @@
 
 
 @media (max-width:425px) { 
+
+  .home-left--container {
+    align-items: center;
+  }
   .hello-text {
     font-size: 24px;
   }
