--- a/src/sections/Footer/Footer.css
+++ b/src/sections/Footer/Footer.css
@@ -84,7 +84,7 @@ margin-bottom: 10px;
 .credits{
     position: absolute;
     bottom: 0;
-    width: 95%;
+    width: 90%;
     font-size: 1.5rem;
     font-weight: bold;
     letter-spacing: 1px;
@@ -184,12 +184,18 @@ margin-bottom: 10px;
 @media (max-width:450px) {
     .footer{
         height: 166vh;
-        padding: 0 10px;
+        padding: 0 20px;
     }
     
     .footer-content{
         flex-direction: column;
         height: 160vh;
+    }
+
+    .connect{
+        padding: 0;
+        justify-content: center;
+        align-items: center;
     }
     
     .footer-logo img{
@@ -217,7 +223,7 @@ margin-bottom: 10px;
 @media (max-width:376px) {
     
     .footer{
-        height: 175vh;
+        height: 171vh;
     }
 }
 
