--- a/src/components/DemoCard/DemoCard.css
+++ b/src/components/DemoCard/DemoCard.css
@@ -7,7 +7,7 @@
   flex-direction: column;
   justify-content: space-between;
   border-radius: 25px 0 25px 0;
-  margin: 50px;
+  margin: 30px 50px;
 }
 
 .demo--video {
